# edgelogic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
edgelogic/: __init__.py  compiler.py  constants.py  runtime.py  types.py  utils.py
examples/: agent_loop.py  benchmark.py
tests/: test_basic.py  test_compiler.py  test_utils.py
